MODON MRE BPDEV/force-app/main/default/objects/Content_Repository_Data__mdt/Content_Repository_Data__mdt.object-meta.xml
<CustomObject>
    <label>Content Repository Data</label>
    <pluralLabel>Content Repository Data</pluralLabel>
</CustomObject>