MODON MRE BPDEV/force-app/main/default/objects/Content_Repository_Data__mdt/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <label>Document Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>