MODON MRE BPDEV/force-app/main/default/objects/Content_Repository_Data__mdt/fields/Json_Field_Map__c.field-meta.xml
<CustomField>
    <fullName>Json_Field_Map__c</fullName>
    <label>Json Field Map</label>
    <type>TextArea</type>
</CustomField>