MODON MRE BPDEV/force-app/main/default/objects/Content_Repository_Data__mdt/fields/Parent_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lookup_Field__c</fullName>
    <label>Parent Lookup Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>