MODON MRE BPDEV/force-app/main/default/objects/Content_Repository_Data__mdt/fields/Response_Key__c.field-meta.xml
<CustomField>
    <fullName>Response_Key__c</fullName>
    <label>Response Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>